--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+
+.body-style {
+  margin: 0 auto;
+  line-height: 1;
+  background-color: #202020;
+  font-family: 'Inter', 'Arial', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  width: 100%;
+  min-height: 600px;
+}
+
+.link-transparency {
+  opacity: 1;
+  transition: opacity 0.2s;
+  cursor: pointer;
+}
+
+.link-transparency:hover {
+  opacity: 0.7;
+}
+
+.button-transparency {
+  opacity: 1;
+  transition: opacity 0.2s;
+  cursor: pointer;
+}
+
+.button-transparency:hover {
+  opacity: 0.8;
 }
