--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -6,7 +6,7 @@
   }
   
   .movies-card__item-image {
-    width: max(360px, 100%);
+    width: max(100%);
     height: 201px;
     object-fit: cover;
     border-radius: 6px;
