--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -13,9 +13,9 @@
         -o-transform: scale(1, 1);
         transform: scale(1, 1);
     }
-}
-
-@keyframes preloader-inside-red {
+  }
+  
+  @keyframes preloader-inside-red {
     0% {
         -webkit-transform: scale(0, 0);
         -moz-transform: scale(0, 0);
@@ -37,50 +37,50 @@
         -o-transform: scale(1, 1);
         transform: scale(1, 1);
     }
-}
-
-.preloader {
-    position: fixed;
+  }
+  
+  .preloader {
     display: flex;
-    justify-content: center;
     align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
-    background-color: none;
-    z-index: 5;
-}
-
-.preloader__round {
-    width: 80px;
-    height: 80px;
+    justify-content: center;
+    z-index: 10;
+    padding: 20px;
+  }
+  
+  .preloader__container {
+    width: 100px;
+    height: 100px;
+    position: relative;
+  }
+  
+  .preloader__round {
+    width: 100px;
+    height: 100px;
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(61, 220, 132, 1);
+    background: #d3289a;
     border-radius: 50px;
-}
-
-.preloader__round::after,
-.preloader__round::before {
+  }
+  
+  .preloader__round::after,
+  .preloader__round::before {
     content: '';
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 50px;
-}
-
-.preloader__round::after {
+  }
+  
+  .preloader__round::after {
     background: white;
     animation: preloader-inside-white 1s ease-in-out infinite;
-}
-
-.preloader__round::before {
+  }
+  
+  .preloader__round::before {
     z-index: 10;
-    background: rgba(61, 220, 132, 1);
+    background: #d3289a;
     animation: preloader-inside-red 1s ease-in-out infinite;
-}
+  }
