--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -27,7 +27,7 @@
   
   .movies-card__item-title {
     margin: 0;
-    padding-left: 2px;
+    padding-left: 14px;
     color: #000000;
     font-size: 14px;
     font-family: Inter;
@@ -108,8 +108,8 @@
   }
   
   .movies-card__duration {
-    margin: 0;
-    padding: 1px 7px 1 7px;
+    margin: 0 16px 0 0;
+    padding: 1px 7px 1px 7px;
     padding-right: 11px;
     background-color: #F9F9F9;
     border-radius: 3px;
@@ -131,11 +131,17 @@
   @media (max-width: 1050px) {
 
     .movies-card__duration {
-      padding-right: 9px;
+      margin: 0;
     }
 
     .movies-card__item-info {
       padding: 26px 0px 12px;
+    }
+
+    .movies-card__item-title {
+      padding-left: 0;
+      font-size: 13px;
+      line-height: 14px;
     }
 
   }
