fix: corrections after the review (6)

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -8,7 +8,7 @@
   
   .movies__nothingFound {
     margin: 0;
-    color: #FFF;
+    color: #ff0000;
     text-align: center;
     font-size: 24px;
     font-style: normal;
